# jaxpint

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  cgw-skymap-ocarina_white-real-marg-9963316.npz  conftest.py  main.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
diagrams/: .$jaxpint_architecture.drawio.bkp  jaxpint_architecture.drawio  pta_likelihood_pipeline.drawio
docs/: conf.py  index.rst
docs/api/: index.rst
docs/guides/: adding_a_component.rst  adding_a_component_self_registered.rst  clock_data.rst  differentiable_fitting.rst  index.rst  loading_data.rst  pta_likelihood_flow.rst
examples/: 00_quickstart.ipynb  cgw_anchor_ladder.py  cgw_conditioned_localization.py  cgw_detection_significance.py  cgw_distance_sensitivity.py  cgw_distance_skymap.py  cgw_earth_vs_pulsar_distance.py  cgw_incoherent_distance_skymap.py  cgw_localization_marginal.py  cgw_localization_skymap.py  cgw_multi_source_localization.py  cgw_overfitting_sweep.ipynb  correlated_gwb_demo.ipynb  cw_distance_fold_demo.ipynb  fisher_info_all_params.ipynb  likelihood_contour_2d.ipynb  likelihood_contour_cgw_distance_vs_pulsar_distance.ipynb  likelihood_contour_frequency_vs_distance.ipynb  likelihood_contour_pulsar0_vs_pulsar1_distance.ipynb  likelihood_contour_skypos_vs_distance.ipynb  likelihood_contour_strain_vs_distance.ipynb  nanograv_two_pulsar_distance_scan.ipynb  nanograv_two_pulsar_distance_scan.py  pta_distance_corner_scan.ipynb  pta_likelihood_vs_distance.ipynb  pta_likelihood_vs_distance_gwb.ipynb  pta_likelihood_vs_distance_realistic.ipynb  pta_nuts.ipynb  simplest_likelihoo_cgw.ipynb  simplest_likelihood_cgw.ipynb  single_pulsar_fitting.ipynb  single_pulsar_marginalization.ipynb  single_pulsar_nuts.ipynb
jaxpint/: __init__.py  _build_context.py  _component_order.py  _psd.py  astrometry.py  bridge.py  components.py  constants.py  dispersion_dm.py  dual_float.py  fitter.py  jump.py  likelihood.py  model.py  model_builder.py  native.py  noise.py  notebook_utils.py  phase_result.py  red_noise.py  shapiro.py  simulation.py  solar_wind.py  solar_wind_x.py  spectra.py  spin.py  tropo_geometry.py  troposphere.py  types.py  utils.py
jaxpint/bayes/: __init__.py  credible.py  cw_upper_limit.py  defaults.py  incoherent_ul.py  marginal.py  posterior.py  priors.py  validate.py
jaxpint/binary/: __init__.py  _build.py  _param_decls.py  bt.py  bt_piecewise.py  common.py  dd.py  ddgr.py  ddh.py  ddk.py  dds.py  ell1.py  ell1h.py  ell1k.py  kepler.py
jaxpint/bridge/: __init__.py  _aliases.py  _model_builder.py  _param_builder.py  _registry.py  component_builder.py  model_conversion.py  toa_conversion.py
jaxpint/clock/: __init__.py  _pinned.py  clockfile.py  config.py  correction.py  fetch.py  observatory.py  paths.py  posvels.py  staleness.py  timescale.py  update.py
jaxpint/data/: __init__.py
jaxpint/delay/: __init__.py  _barycentric.py  _epoch.py  astrometry.py  chromatic_cm.py  chromatic_cmx.py  cmwavex.py  dispersion_dm.py  dispersion_dmx.py  dispersion_jump.py  dmwavex.py  exponential_dip.py  fdjump.py  frequency_dependent.py  shapiro.py  solar_wind.py  solar_wind_x.py  troposphere.py  wavex.py
jaxpint/fitters/: __init__.py  _base.py  _common.py  diagnostics.py  gls.py  wideband.py  wls.py
jaxpint/frequentist/: __init__.py  detection.py  nulls.py  optimal.py  sensitivity.py  stats.py
jaxpint/loaders/: __init__.py  nanograv.py  native.py
jaxpint/noise/: __init__.py  _fourier_gp.py  _power_law.py  _white_common.py  chrom_noise.py  dm_noise.py  dm_white.py  ecorr.py  free_spectrum.py  noise_model.py  red_noise.py  sw_noise.py  white.py
jaxpint/par/: __init__.py  _component_registry.py  _tcb_generated.py  _tcb_tables.py  aliases.py  components.py  core.py  parfile.py  parser.py  raw_params.py  registry.py  registry_table.py  result.py  spec.py  text_adapter.py  writer.py
jaxpint/parfile/: __init__.py  _aliases.py  _converters.py  _model_builder.py  _param_builder.py  _registry.py  _tokenizer.py
jaxpint/phase/: __init__.py  glitch.py  ifunc.py  jump.py  piecewise_spindown.py  spin.py  wave.py
jaxpint/pta/: __init__.py  batching.py  conditional.py  correlated_likelihood.py  cw_localization.py  cw_upper_limit.py  detection.py  extraction.py  fisher.py  incoherent_ul.py  injectors.py  likelihood.py  padding.py  params.py  scan.py  sensitivity.py
jaxpint/stats/: __init__.py  grids.py  regions.py
jaxpint/tim/: __init__.py  masks.py  raw_toa.py  timfile.py  writer.py
jaxpint/types/: __init__.py  dual_float.py  global_params.py  named_vector.py  parameter_vector.py  toa_data.py
slurm/: README.md  build_ocarina.py  build_overlay.sh  fetch_data.sh  run_cgw_incoherent.sbatch  run_cgw_localization.sbatch  run_cgw_multi_source.sbatch  run_cgw_skymap.sbatch  run_distance_scan.sbatch  stage_ocarina.sh
tests/: helpers.py  test_absolute_phase.py  test_astrometry_ecliptic.py  test_bary_toas.py  test_bayes_credible.py  test_bayes_defaults.py  test_bayes_grid_marginal.py  test_bayes_marginal.py  test_bayes_posterior.py  test_bayes_priors.py  test_bayes_samplers_numpyro.py  test_bayes_samplers_priors.py  test_bayes_validate.py  test_binary_bt.py  test_binary_bt_piecewise.py  test_binary_common.py  test_binary_dd.py  test_binary_ddgr.py  test_binary_ddk.py  test_binary_ell1.py  test_binary_integration.py  test_bridge.py  test_chrom_noise.py  test_clock_correction.py  test_clock_data.py  test_clock_pint_alignment.py  test_clock_posvels.py  test_clockfile.py  test_clogL.py  test_clogL_sampler.py  test_component_indexing.py  test_conditional.py  test_correlated_chunked.py  test_correlated_gwb.py  test_correlated_noise_common.py  test_credible_maps.py  test_cross_implementation.py  test_cw_earth_term.py  test_cw_localization.py  test_cw_upper_limit.py  (+77 more)
tests/data/: LICENSE.PINT.md  README.md
tests/enterprise_checks/: _ent_helpers.py  conftest.py  test_ent_backend_selection.py  test_ent_building_blocks.py  test_ent_curn.py  test_ent_hd_gwb.py  test_ent_red_noise.py  (+2 more)
tools/: build_docs.sh  bump_clock_pin.py  check.sh  gen_tempo2_goldens.py  regen_tcb_tables.py
(+53 files in other folders)
