[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaxpint"]

[project]
name = "jaxpint"
version = "0.1.0"
description = "JAX-accelerated pulsar timing (port of PINT)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.11.0",
    "jaxtyping>=0.3.9",
    "blackjax>=1.5",
    # Native time/geometry pipeline (clock/timescale/posvels) uses these
    # directly; they were previously pulled in transitively via pint-pulsar.
    "astropy>=6.0",
    "pyerfa>=2.0",
    "jplephem>=2.21",
]

[project.optional-dependencies]
# PINT is optional: needed only for the bridge converters
# (jaxpint.bridge.*), the NANOGrav loader (jaxpint.loaders.load_nanograv_pta),
# and the notebook utilities. The native .par/.tim pipeline (jaxpint.native)
# works without it.
pint = ["pint-pulsar>=1.0"]
cuda = ["jax[cpu,cuda13]>=0.4.20"]
cpu = ["jax[cpu]>=0.4.20"]
# Sky-map example (examples/cgw_distance_skymap.py): HEALPix pixelization +
# Mollweide plotting. healpy already pulls matplotlib, listed explicitly because
# the example imports it directly.
skymap = ["healpy>=1.16.0", "matplotlib>=3.7"]
docs = [
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.17.0",
]
dev = [
    "jaxpint[docs]",
    "jaxpint[skymap]",
    "jaxpint[pint]",
    "pytest>=7.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.0",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "nbconvert>=7.0",
    "git-filter-repo>=2.47.0",
    "sphinx-autobuild>=2024.10.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default, run with --runslow)",
]
