[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaxpint"]

[project]
name = "jaxpint"
version = "0.1.0"
description = "JAX-accelerated pulsar timing (port of PINT)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.11.0",
    "jaxtyping>=0.3.9",
    "blackjax>=1.5",
    # Native time/geometry pipeline (clock/timescale/posvels) uses these
    # directly; they were previously pulled in transitively via pint-pulsar.
    "astropy>=6.0",
    "pyerfa>=2.0",
    "jplephem>=2.21",
    "loguru>=0.7",
    # CA bundle for the clock-snapshot HTTPS fetch (jaxpint/clock/fetch.py);
    # guarantees a working cert store (notably on macOS framework Python).
    "certifi>=2023.7.22"
]

[project.optional-dependencies]
# PINT is optional: needed only for the bridge converters
# (jaxpint.bridge.*), the NANOGrav loader (jaxpint.loaders.load_nanograv_pta),
# and the notebook utilities. The native .par/.tim pipeline (jaxpint.native)
# works without it.
pint = ["pint-pulsar>=1.0"]
cuda = ["jax[cpu,cuda13]>=0.4.20"]
cpu = ["jax[cpu]>=0.4.20"]
# Sky-map example (examples/cgw_distance_skymap.py): HEALPix pixelization +
# Mollweide plotting. healpy already pulls matplotlib, listed explicitly because
# the example imports it directly.
skymap = ["healpy>=1.16.0", "matplotlib>=3.7"]
docs = [
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.17.0",
]
dev = [
    "jaxpint[docs]",
    "jaxpint[skymap]",
    "jaxpint[pint]",
    "pytest>=7.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1.380",
    # Runtime typechecker backing the jaxtyping import hook (test-time shape
    # checking, scoped to jaxpint.utils -- see conftest.py).
    "beartype>=0.18",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "hypothesis>=6.0",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "nbconvert>=7.0",
    "git-filter-repo>=2.47.0",
    "sphinx-autobuild>=2024.10.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default, run with --runslow)",
]

[tool.pyright]
# Static type checking. Covers the library plus examples and top-level scripts;
# tests are in scope but with type-flow rules relaxed (see below). Note: jaxtyping
# shape strings (e.g. Float[Array, " n_toas"]) are NOT shape-checked statically
# -- they resolve to jax.Array; this catches None/return/kwarg/typo bugs only.
include = [
    "jaxpint",
    "tests",
    "examples",
    "conftest.py",
    "main.py",
    "slurm",
    "tools",
    "docs",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
# Dominated by astropy/numpy stub weakness: .value/.unit on Quantity, .jd1/.jd2
# on Time, .colnames on Table all resolve to numpy unions that "lack" the
# attribute. These are not bugs (the code is correct), so keep them as
# non-blocking warnings rather than scattering casts. Promote to error if
# upstream typing improves.
reportAttributeAccessIssue = "warning"

# Test code intentionally accesses internals and uses Optional-returning helpers
# it knows are populated; error-gating the type-flow rules there is high-noise and
# zero-bug-yield (the suite validates behavior at runtime). Keep tests in scope
# for the high-value checks (missing imports, undefined names, bad syntax) but
# turn off the type-flow rules.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalOperand = "none"
reportCallIssue = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"

[tool.ruff]
target-version = "py312"
line-length = 88
# Notebooks are exploratory -- out of lint and format scope. Tests ARE linted
# (real unused-import/undefined-name/typo coverage) but are NOT auto-formatted;
# the format scope is narrowed separately under [tool.ruff.format] below.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# Default rule set is E, F, W.
#   F722 -- jaxtyping shape strings (Float[Array, " n_toas"]) are string literals, not
#           Python forward refs; F722 false-positives on every one.
#   E731 -- the codebase deliberately assigns small local lambdas; respect that.
ignore = ["F722", "E731"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files enable x64 (jax.config.update) before the re-export imports, and
# their re-exports look "unused" to F401.
"**/__init__.py" = ["E402", "F401"]
# par/spec.py exposes PARAM_SPEC/ALIAS_MAP/... lazily via a module __getattr__, so they
# appear in __all__ but are invisible to ruff's static F822 check.
"jaxpint/par/spec.py" = ["F822"]
# Example/driver scripts and conftest set os.environ / jax flags before imports.
"examples/*.py" = ["E402"]
"conftest.py" = ["E402"]
# Tests legitimately run statements before imports: ``pytest.importorskip("pint")``
# guards optional-dependency modules, and a few set jax flags (-> E402). They also
# lean on compact ``a = ...; b = ...`` builders in reference implementations and
# table-style setup (-> E702), the same test-idiom layout that keeps them out of
# the formatter above. The high-value F-checks (unused/undefined names) still apply.
"tests/**/*.py" = ["E402", "E702"]

[tool.ruff.format]
# Defaults (double quotes, magic trailing comma). The one-time reformat is applied
# in a separate commit.
# Tests are deliberately NOT auto-formatted -- they lean on test-idiom layout
# (aligned tables of expected values, compact builders). Lint still covers them
# (see [tool.ruff] above); only the formatter is scoped out here.
# NB: the formatter's exclude needs a glob (``tests/**``); a bare ``tests`` (which
# works for the top-level file-resolver exclude) is silently ignored here.
exclude = ["tests/**"]

[tool.coverage.run]
source = ["jaxpint"]
omit = ["jaxpint/data/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
